# api-cplusplus

./: CMakeLists.txt
demo/: CMakeLists.txt
include/: BatchTableWriter.h
src/: BatchTableWriter.cpp  CMakeLists.txt
src/lz4/: CMakeLists.txt
test/: CMakeLists.txt
